# VSLAM_BA_with_eigen

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  testMonoBA.cpp
config/: default.yaml
include/myslam/: algorithm.h  backend.h  camera.h  common_include.h  edge.h  frame.h  g2o_types.h  problem.h  tic_toc.h  vertex.h
src/: CMakeLists.txt  backend.cpp  dataset.cpp  edge.cpp  frontend.cpp  map.cpp  problem.cpp  vertex.cpp  viewer.cpp  visual_odometry.cpp
